--- a/clase10/desafio-08-pug/public/index.html
+++ b/clase10/desafio-08-pug/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <title>Index</title>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
                 <a href="/"> Home</a>
             </li>
             <li>
-                <a href="/api/productos"> Productos</a>
+                <a href="/productos"> Productos</a>
             </li>
         </ul>
     </nav>
