--- a/clase12-webSockets/chat-websocket/public/index.html
+++ b/clase12-webSockets/chat-websocket/public/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
